--- a/index.html
+++ b/index.html
@@ -1673,6 +1673,13 @@
         	{margin-bottom:0in;}
         ul
         	{margin-bottom:0in;}
+        li:before {
+            content: "►";
+            display: block;
+            float: left;
+            width: 1.2em;
+            color: #ff0000;
+        }
         -->
         
     </style>
