--- a/index.html
+++ b/index.html
@@ -1745,6 +1745,7 @@
                 <o:p></o:p>
             </span>
         </p>
+        <img src="http://www.math.uchicago.edu/~lawler/image1small.jpg" align="right">
 
 
         <p class=MsoNormal>
@@ -1873,7 +1874,7 @@
             <!--[if !supportLists]-->
             <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
                 <span style='mso-list:Ignore'>
-                    o
+                    ►
                     <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                     </span>
                 </span>
@@ -1916,7 +1917,7 @@
             <!--[if !supportLists]-->
             <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
                 <span style='mso-list:Ignore'>
-                    o
+                    ►
                     <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                     </span>
                 </span>
@@ -1959,7 +1960,7 @@
             <!--[if !supportLists]-->
             <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
                 <span style='mso-list:Ignore'>
-                    o
+                    ►
                     <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                     </span>
                 </span>
@@ -2001,7 +2002,7 @@
             <!--[if !supportLists]-->
             <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
                 <span style='mso-list:Ignore'>
-                    o
+                    ►
                     <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                     </span>
                 </span>
@@ -2045,7 +2046,7 @@
             <!--[if !supportLists]-->
             <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
                 <span style='mso-list:Ignore'>
-                    o
+                    ►
                     <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                     </span>
                 </span>
@@ -2089,7 +2090,7 @@
             <!--[if !supportLists]-->
             <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
                 <span style='mso-list:Ignore'>
-                    o
+                    ►
                     <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                     </span>
                 </span>
@@ -2135,7 +2136,7 @@
             <!--[if !supportLists]-->
             <span style='font-size:14.0pt;font-family:"Courier New";mso-fareast-font-family:"Courier New"'>
                 <span style='mso-list:Ignore'>
-                    o
+                    ►
                     <span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
                     </span>
                 </span>
