--- a/index.html
+++ b/index.html
@@ -1734,6 +1734,7 @@
             </span>
         </p>
 
+        <img src="https://github.com/qiangwu2/denniswu/blob/master/prof.jpg" align="right">
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
             I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
@@ -1745,7 +1746,7 @@
                 <o:p></o:p>
             </span>
         </p>
-        <img src="http://www.math.uchicago.edu/~lawler/image1small.jpg" align="right">
+       
 
 
         <p class=MsoNormal>
