--- a/index.html
+++ b/index.html
@@ -1734,7 +1734,7 @@
             </span>
         </p>
 
-        <img src="https://github.com/qiangwu2/denniswu/blob/master/prof.jpg" align="right">
+        <img src="prof.jpg" align="right">
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
             I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
