--- a/index.html
+++ b/index.html
@@ -2183,7 +2183,7 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Math 221: Calculus I, 
-                 Fall 2018, appeared in the excellent TA list.
+                Fall 2018, <i>appeared in the excellent TA list.</i>
                 <o:p></o:p>
             </span>
         </p>
@@ -2220,7 +2220,6 @@
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                .
                 <o:p></o:p>
             </span>
         </p>
