--- a/index.html
+++ b/index.html
@@ -1734,7 +1734,7 @@
             </span>
         </p>
 
-        <img src="prof.jpg" align="right" style="width:248px;height:248px;">
+        <img src="prof.jpg" align="right" style="width:228px;height:208px;">
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
             I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
@@ -2236,6 +2236,16 @@
             <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:18.0pt;font-family:Times'>
                     <o:p>&nbsp;</o:p>
+                </span>
+            </b>
+        </p>
+        
+        
+        <p class=MsoNormal>
+            <b style='mso-bidi-font-weight:normal'>
+                <span style='font-size:18.0pt;font-family:Times'>
+                    Talks
+                    <o:p></o:p>
                 </span>
             </b>
         </p>
