--- a/index.html
+++ b/index.html
@@ -2154,11 +2154,9 @@
         </p>
 
         <p class=MsoNormal>
-            <span style='font-size:14.0pt;font-family:Times;mso-fareast-font-family:
-            "Times New Roman";mso-bidi-font-family:Arial;color:black'>&nbsp;</span>
             <b style='mso-bidi-font-weight:normal'>
-                <span style='font-size:18.0pt;font-family:
-                Times'>Teaching at UIUC
+                <span style='font-size:18.0pt;font-family:Times'>
+                    Teaching at UIUC
                     <o:p></o:p>
                 </span>
             </b>
