--- a/index.html
+++ b/index.html
@@ -2245,8 +2245,8 @@
         
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                <i>Multi-species Sherrington-Kirkpatrick model in the replica symmetric regime</i> 
-                 March 2021, UIUC probability seminar.
+                <i>Probability seminar, </i> 
+                  UIUC, 2021 March.
                 <o:p></o:p>
             </span>
         </p>
