--- a/index.html
+++ b/index.html
@@ -2100,7 +2100,7 @@
             <i style='mso-bidi-font-style:normal'>
                 <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                 "Times New Roman"'>
-                    Algorithms for the random field Ising model,
+                    Approximation algorithms for the random field Ising model,
                     <o:p></o:p>
                 </span>
             </i>
