--- a/index.html
+++ b/index.html
@@ -1970,7 +1970,7 @@
             <i style='mso-bidi-font-style:normal'>
                 <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                 "Times New Roman"'>
-                    Universality of l^p Grothedeick problem: 2 &#60 p &#60 &#8734, 
+                    Universality of ell^p Grothedeick problem: 2 &#60 p &#60 &#8734, 
                     <o:p></o:p>
                 </span>
             </i>
