--- a/index.html
+++ b/index.html
@@ -1739,7 +1739,7 @@
             <span style='font-size:14.0pt;font-family:Times'>
             I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
             primary research interest is in probablity and statistical physics, such as spin glasses, random polymer models and their interactions
-            with other areas like random matrices, Gaussian free field etc. I'm also interested in
+            with other areas like random matrices, 2D-Gaussian free field etc. I'm also interested in
             the application of mean field spin glass theory to high dimensional statistics and information theory. I am advised by Professor 
                 <a href="https://faculty.math.illinois.edu/~psdey/">Partha Dey</a> and Professor 
             <a href="https://faculty.math.illinois.edu/~rsong/">Renming Song</a>.
