--- a/index.html
+++ b/index.html
@@ -1851,7 +1851,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha Dey. submitted (2020), 
+                with Partha Dey. to appear in J. Stat. Phys.(2021), 
                 <a href="https://arxiv.org/abs/2012.13381">arXiv 2012.13381</a>
                 <o:p></o:p>
             </span>
