update the paper title

--- a/index.html
+++ b/index.html
@@ -1927,7 +1927,7 @@
             <i style='mso-bidi-font-style:normal'>
                 <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                 "Times New Roman"'>
-                    Phase transition of structured random matrices with spike, 
+                    Phase transition of spiked structured random matrices, 
                     <o:p></o:p>
                 </span>
             </i>
@@ -1970,7 +1970,7 @@
             <i style='mso-bidi-font-style:normal'>
                 <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                 "Times New Roman"'>
-                    Universality of &#x2113^p Grothedeick problem: 2 &#60 p &#60 &#8734, 
+                    Universality of &#x2113_p Grothedeick problem: 2 &#60 p &#60 &#8734, 
                     <o:p></o:p>
                 </span>
             </i>
