--- a/index.html
+++ b/index.html
@@ -1738,9 +1738,9 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
             I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
-            primary research interest is in probablity and statistical physics, such as spin glasses, random polymer models and their interactions
-            with other areas like random matrices, 2D-Gaussian free field etc. I'm also interested in
-            the application of mean field spin glass theory to high dimensional statistics and information theory. I am advised by Professor 
+            primary research interest is in probability and statistical physics, mainly on disordered system, such as spin glasses, random polymer models and their interactions
+            with other areas like random matrices etc. I'm also interested in
+            the application of mean field spin glass theory to high dimensional statistics, information theory and theoretical computer science. I am advised by Professor 
                 <a href="https://faculty.math.illinois.edu/~psdey/">Partha Dey</a> and Professor 
             <a href="https://faculty.math.illinois.edu/~rsong/">Renming Song</a>.
                 <o:p></o:p>
@@ -2222,7 +2222,12 @@
             </b>
         </p>
         
-        
+         <p class=MsoNormal>
+            <span style='font-size:7.0pt;font-family:Times'>
+                Template adapted from <a href ="http://www.math.ucsd.edu/~tiz161/">Tianyi Zheng </a>'s 
+                <o:p></o:p>
+            </span>
+        </p>
 
     </div>
 
