--- a/index.html
+++ b/index.html
@@ -1764,7 +1764,7 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Email:
-                qiangwu2@illinois.edu
+                FirstName + LastName+2 AT illinois.edu
                 <o:p></o:p>
             </span>
         </p>
