--- a/index.html
+++ b/index.html
@@ -2184,7 +2184,7 @@
     
          <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                <i>Frontier Probability Days </i> 
+                <i>Frontier Probability Days, </i>
                   Mean field spin glass models under weak external fields, December, 2021.
                 <o:p></o:p>
             </span>
@@ -2194,7 +2194,7 @@
         
             <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                <i>Workshop on Universality and Integrability in Random Matrix Theory and Interacting Particle Systems </i> 
+                <i>Workshop on Universality and Integrability in Random Matrix Theory and Interacting Particle Systems, </i> 
                   MSRI, Berkeley, September, 2021.
                 <o:p></o:p>
             </span>
