--- a/index.html
+++ b/index.html
@@ -1741,7 +1741,7 @@
             primary research interest is in probability and statistical physics, mainly on disordered system, such as spin glasses, random polymer models and their interactions
             with other areas like random matrices etc. I'm also interested in
             the application of mean field spin glass theory to high dimensional statistics and theoretical computer science. I am advised by Professor 
-                <a href="https://faculty.math.illinois.edu/~psdey/">Partha Dey</a>.
+                <a href="https://faculty.math.illinois.edu/~psdey/">Partha S. Dey</a>.
                 <o:p></o:p>
             </span>
         </p>
@@ -1763,7 +1763,7 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Email:
-                qiangwu2 AT illinois DOT edu
+                qiangwu2 [at] illinois [dot] edu
                 <o:p></o:p>
             </span>
         </p>
