--- a/index.html
+++ b/index.html
@@ -1903,8 +1903,8 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:12.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                <i> We use a stochastic analysis approach to prove the central limit theorem of free energy and overlap in a multi-species spin glass model,
-                which in turn suggests the phase transition of structured random matrices with spikes.</i>
+                <i> We use a stochastic analysis approach to prove the central limit theorem of free energy and overlap in general (convex + nonconvex) multi-species spin glass model,
+                <br>which in turn suggests the phase transition of structured random matrices with spikes.</i>
                 <o:p></o:p>
             </span>
         </p>
@@ -1957,6 +1957,15 @@
         </p>
 
         <p class=MsoListParagraphCxSpMiddle>
+            <span style='font-size:12.0pt;font-family:
+            "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
+                <i> Assuming the row sum of the variance profile matrix of structured random matrices is a constant, with an algebraic observation
+                <br>we prove the scaling limit of the largest eigenvalue of the structured random matrices, which also gives the ground state energy of multi-species spherical models.</i>
+                <o:p></o:p>
+            </span>
+        </p>
+        
+        <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
                 <o:p>&nbsp;</o:p>
@@ -2000,6 +2009,17 @@
             </span>
         </p>
 
+        <p class=MsoListParagraphCxSpMiddle>
+            <span style='font-size:12.0pt;font-family:
+            "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
+                <i> By extending the cluster expansion technique, we develop a general framework to study the fluctuation of free energy for a large class of spin glass models with weak external fields. 
+                <br> For the usual Sherrington-Kirkpatrick model, it gives a complete characterization on how the external fields affect the system. This technique can
+                <br> be generalized to many other models, in particular for diluted models, we expect some non-Gaussian fluctuation for some external.
+                </i>
+                <o:p></o:p>
+            </span>
+        </p>
+        
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
