--- a/index.html
+++ b/index.html
@@ -2013,8 +2013,8 @@
             <span style='font-size:12.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
                 <i> By extending the cluster expansion technique, we develop a general framework to study the fluctuation of free energy for a large class of spin glass models with weak external fields. 
-                <br> For the usual Sherrington-Kirkpatrick model, it gives a complete characterization on how the external fields affect the system. This technique can
-                <br> be generalized to many other models, in particular for diluted models, we expect some non-Gaussian fluctuation for some external.
+                <br> For the classical Sherrington-Kirkpatrick model, it gives a complete characterization on how the external fields affect the system. This technique can be generalized to many other
+                <br> models, in particular for diluted models, we expect some non-Gaussian fluctuation under some external field.
                 </i>
                 <o:p></o:p>
             </span>
