--- a/index.html
+++ b/index.html
@@ -2189,7 +2189,13 @@
             </b>
         </p>
         
-    
+        <p class=MsoNormal>
+            <span style='font-size:14.0pt;font-family:Times'>
+                <i>Probability Seminar, </i>
+                  University of Wisconsin at Madsion, March, 2022.
+                <o:p></o:p>
+            </span>
+        </p>
          <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 <i>Frontier Probability Days, </i>
