--- a/index.html
+++ b/index.html
@@ -2192,7 +2192,7 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 <i>Probability Seminar, </i>
-                  University of Wisconsin at Madsion, March, 2022.
+                  University of Wisconsin–Madison, March, 2022.
                 <o:p></o:p>
             </span>
         </p>
