--- a/index.html
+++ b/index.html
@@ -1775,6 +1775,8 @@
                 <o:p></o:p>
             </span>
         </p>
+        
+        <img src="prof1-2.jpg", width="400", height="341">
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
