--- a/index.html
+++ b/index.html
@@ -1734,7 +1734,7 @@
             </span>
         </p>
 
-       <!- <img src="prof1-2.jpg" align="right" style="width:185px;height:225px;"> ->
+        <img src="prof1-2.jpg" align="right" style="width:185px;height:225px;"> 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
             I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
@@ -1776,7 +1776,7 @@
             </span>
         </p>
         
-        <img src="prof1-2.jpg", width="400", height="341">
+       
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
