--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
         a:visited, span.MsoHyperlinkFollowed
         	{mso-style-noshow:yes;
         	mso-style-priority:99;
-        	color:#954F72;
+        	color:blue;
         	mso-themecolor:followedhyperlink;
         	text-decoration:underline;
         	text-underline:single;}
@@ -1678,6 +1678,7 @@
             display: block;
             float: left;
             width: 1.2em;
+            
             color: #ff0000;
         }
         -->
@@ -1714,7 +1715,7 @@
      </o:shapelayout></xml><![endif]-->
 </head>
 
-<body bgcolor=white lang=EN-US link=blue vlink="#954F72" style='tab-interval:
+<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:
 .5in'>
 
     <div class=WordSection1>
