--- a/index.html
+++ b/index.html
@@ -1809,7 +1809,11 @@
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:18.0pt;font-family:Times'>
-                    Articles
+                    Articles <span style='font-size:11.0pt;font-family:"Times New Roman";mso-fareast-font-family:
+                        "Times New Roman"'>
+                    (the following use the alphabetical authorship convention common to theoretical fields unless starred) 
+                    <o:p></o:p>
+                </span>
                     <o:p></o:p>
                 </span>
             </b>
