--- a/index.html
+++ b/index.html
@@ -2139,6 +2139,9 @@
                 </span>
             </b>
         </p>
+        
+        <details>
+            <summary> Teaching at UIUC </summary>
 
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
@@ -2196,6 +2199,8 @@
                 <o:p></o:p>
             </span>
         </p>
+            
+        </details>
 
         <p class=MsoNormal style='background:white'>
             <span style='font-size:14.0pt;
