--- a/index.html
+++ b/index.html
@@ -1876,7 +1876,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha Dey. J. Stat.Phys., 185(3):Paper No. 22, 2021, 
+                with Partha S. Dey. J. Stat.Phys., 185(3):Paper No. 22, 2021, 
                 <a href="https://arxiv.org/abs/2012.13381">arXiv 2012.13381</a>
                 <o:p></o:p>
             </span>
@@ -1964,7 +1964,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha Dey, preprint (2021), 
+                with Partha S. Dey, to appear in Commun. Math. Phys. (2023), 
                 <a href="https://arxiv.org/abs/2112.11349">arXiv:2112.11349</a>
                 <o:p></o:p>
             </span>
@@ -2009,7 +2009,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha Dey, preprint (2022), 
+                with Partha S. Dey, preprint (2022), 
                 <a href="https://arxiv.org/abs/2212.14571">arXiv:2212.14571</a>
                 <o:p></o:p>
             </span>
@@ -2054,7 +2054,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha Dey, preprint (2023), 
+                with Partha S. Dey, preprint (2023), 
                 <a href="https://arxiv.org/abs/2012.13381">in preparation</a>
                 <o:p></o:p>
             </span>
