--- a/index.html
+++ b/index.html
@@ -1830,7 +1830,7 @@
                 <span style='font-size:18.0pt;font-family:Times'>
                     Articles <span style='font-size:11.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                         "Times New Roman"'>
-                    (the following use the alphabetical authorship convention common to theoretical fields unless starred) 
+                    (alphabetical authorship convention unless starred) 
                     <o:p></o:p>
                 </span>
                     <o:p></o:p>
