--- a/index.html
+++ b/index.html
@@ -1738,10 +1738,10 @@
         <!-- src="prof1-2.jpg" align="right" style="width:185px;height:225px;"--> 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-            I’m a PhD student of mathematics at the University of Illinois at Urbana-Champaign. My
+                I received my Ph.D. in mathematics from the <a href="https://math.illinois.edu"></a>University of Illinois at Urbana-Champaign. Starting in Fall 2023, I will be a Dunham Jackson Assistant Professor in <a href="https://cse.umn.edu/math">University of Minnesota </a>. My
             primary research interest is in probability and statistical physics, mainly on disordered system, such as spin glasses, random polymer models and their interactions
             with other areas like random matrices etc. I'm also interested in
-            the application of mean field spin glass theory to high dimensional statistics and theoretical computer science. I am advised by Professor 
+            the application of mean field spin glass theory to high dimensional statistics and theoretical computer science. I was advised by Professor 
                 <a href="https://faculty.math.illinois.edu/~psdey/">Partha S. Dey</a>.
                 
                 <o:p></o:p>
@@ -1802,7 +1802,7 @@
          <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
             <span style='font-size:14.0pt;font-family:Times'>
-                <a href="https://qiangwu2.github.io/slocal2023/"> Reading seminar on stochastic localization </a>
+                <a href="https://qiangwu2.github.io/slocal2023/"> Reading seminar on stochastic localization </a> 
                 <o:p></o:p>
             </span>
             </b>
