--- a/index.html
+++ b/index.html
@@ -1919,6 +1919,14 @@
                 <o:p></o:p>
             </span>
         </p>
+        <p class=MsoListParagraphCxSpMiddle>
+            <span style='font-size:14.0pt;font-family:
+            "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
+                <i style='mso-bidi-font-style:normal'>SIAM Journal on Discrete Mathematics  </i>, 37 (3), 1610-1629, 2023,, 
+                <a href="https://arxiv.org/abs/2108.11889">arXiv 2108.11889</a>
+                <o:p></o:p>
+            </span>
+        </p>
 
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
