--- a/index.html
+++ b/index.html
@@ -1914,7 +1914,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Tyler Helmuth, Holden Lee, Will Perkins, Mohan Ravichandran, <i style='mso-bidi-font-style:normal'>SIAM Journal on Discrete Mathematics  </i>, 37 (3), 1610-1629, 2023,, 
+                with Tyler Helmuth, Holden Lee, Will Perkins, Mohan Ravichandran, 
                 <a href="https://arxiv.org/abs/2108.11889">arXiv 2108.11889</a>
                 <o:p></o:p>
             </span>
