--- a/index.html
+++ b/index.html
@@ -2091,7 +2091,7 @@
             <i style='mso-bidi-font-style:normal'>
                 <span style='font-size:14.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                 "Times New Roman"'>
-                    On the largest eigenvalue of strctured random matrices, 
+                Central limit theorem of overlap for the mean field Ghatak-Sherrington model, 
                     <o:p></o:p>
                 </span>
             </i>
@@ -2100,8 +2100,8 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha S. Dey, preprint (2023), 
-                <a href="https://arxiv.org/abs/2012.13381">in preparation</a>
+                with Yueqi Sheng, preprint (2023), 
+                <a href="https://arxiv.org/abs/2312.15774">arXiv:2312.15774</a>
                 <o:p></o:p>
             </span>
         </p>
