--- a/index.html
+++ b/index.html
@@ -1964,7 +1964,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha S. Dey, to appear in <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> (2023), 
+                with Partha S. Dey,  <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> 402(2023), no.2, 1205–1258, 
                 <a href="https://arxiv.org/abs/2112.11349">arXiv:2112.11349</a>
                 <o:p></o:p>
             </span>
