updates on teaching

--- a/index.html
+++ b/index.html
@@ -1964,7 +1964,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha S. Dey,  <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> 402(2023), no.2, 1205–1258, 
+                with Partha S. Dey,  <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> 402, no.2, 1205–1258, 2023, 
                 <a href="https://arxiv.org/abs/2112.11349">arXiv:2112.11349</a>
                 <o:p></o:p>
             </span>
@@ -2249,7 +2249,7 @@
         <details>
             <summary>  <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:18.0pt;font-family:Times'>
-                    Teaching at UIUC
+                    Teaching 
                     <o:p></o:p>
                 </span>
             </b> </summary>
@@ -2262,7 +2262,35 @@
             </b>
         </p>
 
-        
+        <details>
+            <summary>  <b style='mso-bidi-font-weight:normal'>
+                <span style='font-size:16.0pt;font-family:Times'>
+                    At UMN
+                    <o:p></o:p>
+                </span>
+            </b> </summary>
+
+
+        <p class=MsoNormal>
+            <span style='font-size:14.0pt;font-family:Times'>
+                Math 5652: Introduction to stochastic process, 
+                 Fall 2023, 2024 Sping/Fall
+                <o:p></o:p>
+            </span>
+        </p>
+
+        </details>
+
+
+        <details>
+            <summary>  <b style='mso-bidi-font-weight:normal'>
+                <span style='font-size:18.0pt;font-family:Times'>
+                    At UIUC
+                    <o:p></o:p>
+                </span>
+            </b> </summary>
+
+
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Math 231: Calculus II, 
@@ -2312,6 +2340,14 @@
         </p>
             
         </details>
+
+        </details>
+
+
+
+
+
+
 
         <p class=MsoNormal style='background:white'>
             <span style='font-size:14.0pt;
