--- a/index.html
+++ b/index.html
@@ -2256,7 +2256,7 @@
 
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
-                <span style='font-size:18.0pt;font-family:Times'>
+                <span style='font-size:16.0pt;font-family:Times'>
                     <o:p>&nbsp;</o:p>
                 </span>
             </b>
@@ -2265,7 +2265,7 @@
         <details>
             <summary>  <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:16.0pt;font-family:Times'>
-                    At UMN
+                    <dl><dd> At UMN </dd></dl>
                     <o:p></o:p>
                 </span>
             </b> </summary>
@@ -2274,7 +2274,15 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Math 5652: Introduction to stochastic process, 
-                 Fall 2023, 2024 Sping/Fall
+                 Fall 2023, 2024
+                <o:p></o:p>
+            </span>
+        </p>
+
+        <p class=MsoNormal>
+            <span style='font-size:14.0pt;font-family:Times'>
+                Math 5652: Introduction to stochastic process (2 sections), 
+                 2024 Sping
                 <o:p></o:p>
             </span>
         </p>
@@ -2284,8 +2292,8 @@
 
         <details>
             <summary>  <b style='mso-bidi-font-weight:normal'>
-                <span style='font-size:18.0pt;font-family:Times'>
-                    At UIUC
+                <span style='font-size:16.0pt;font-family:Times'>
+                    <dl><dd>At UIUC </dd></dl>
                     <o:p></o:p>
                 </span>
             </b> </summary>
