--- a/index.html
+++ b/index.html
@@ -2265,7 +2265,7 @@
         <details>
             <summary>  <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:16.0pt;font-family:Times'>
-                    <dl><dd> At UMN </dd></dl>
+                     At UMN 
                     <o:p></o:p>
                 </span>
             </b> </summary>
@@ -2293,7 +2293,7 @@
         <details>
             <summary>  <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:16.0pt;font-family:Times'>
-                    <dl><dd>At UIUC </dd></dl>
+                    At UIUC 
                     <o:p></o:p>
                 </span>
             </b> </summary>
