--- a/index.html
+++ b/index.html
@@ -2282,7 +2282,7 @@
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 Math 5652: Introduction to stochastic process (2 sections), 
-                 2024 Sping
+                 2024 Spring
                 <o:p></o:p>
             </span>
         </p>
