--- a/index.html
+++ b/index.html
@@ -1735,7 +1735,8 @@
             </span>
         </p>
 
-        <!-- src="prof1-2.jpg" align="right" style="width:185px;height:225px;"--> 
+        <img src="prof1-3.jpg" align="right" style="width:185px;height:225px;"> 
+
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
                 I received my Ph.D. in mathematics from the <a href="https://math.illinois.edu">University of Illinois at Urbana-Champaign</a>. Starting in Fall 2023, I will be a Dunham Jackson Assistant Professor in the <a href="https://cse.umn.edu/math">University of Minnesota </a>. My
