--- a/index.html
+++ b/index.html
@@ -1822,7 +1822,7 @@
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:18.0pt;font-family:Times'>
-                    Articles <span style='font-size:11.0pt;font-family:"Times New Roman";mso-fareast-font-family:
+                    Research <span style='font-size:11.0pt;font-family:"Times New Roman";mso-fareast-font-family:
                         "Times New Roman"'>
                     (alphabetical authorship convention unless starred) 
                     <o:p></o:p>
