--- a/index.html
+++ b/index.html
@@ -1915,7 +1915,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with <a href="https://www.tylerhelmuth.net">Tyler Helmuth </a>, <a href="https://holdenlee.github.io">Holden Lee </a>, <a href="https://willperkins.org">Will Perkins </a>, <a href="https://scholar.google.com/citations?user=Q0xL7IMAAAAJ&hl=en">Mohan Ravichandran</a>, 
+                with Tyler Helmuth, Holden Lee, Will Perkins, Mohan Ravichandran, 
                 <o:p></o:p>
             </span>
         </p>
