--- a/index.html
+++ b/index.html
@@ -745,6 +745,12 @@
         	mso-themecolor:followedhyperlink;
         	text-decoration:underline;
         	text-underline:single;}
+
+        #unique-link {
+             color: grey; /* Different color for this specific link */
+                text-decoration: none; /* No underline for this specific link */}
+
+
         p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
         	{mso-style-priority:34;
         	mso-style-unhide:no;
@@ -1965,7 +1971,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha S. Dey,  <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> 402, no.2, 1205–1258, 2023, 
+                with <a href="https://psdey.web.illinois.edu", id="unique-link"> Partha S. Dey </a>,  <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> 402, no.2, 1205–1258, 2023, 
                 <a href="https://arxiv.org/abs/2112.11349">arXiv:2112.11349</a>
                 <o:p></o:p>
             </span>
