--- a/index.html
+++ b/index.html
@@ -1876,7 +1876,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha S. Dey. <i style='mso-bidi-font-style:normal'> J. Stat.Phys.</i>, 185(3):Paper No. 22, 2021, 
+                with <a href="https://psdey.web.illinois.edu", id="unique-link"> Partha S. Dey </a>. <i style='mso-bidi-font-style:normal'> J. Stat.Phys.</i>, 185(3):Paper No. 22, 2021, 
                 <a href="https://arxiv.org/abs/2012.13381">arXiv 2012.13381</a>
                 <o:p></o:p>
             </span>
@@ -2016,7 +2016,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Partha S. Dey, preprint (2022), 
+                with <a href="https://psdey.web.illinois.edu", id="unique-link"> Partha S. Dey </a>, preprint (2022), 
                 <a href="https://arxiv.org/abs/2212.14571">arXiv:2212.14571</a>
                 <o:p></o:p>
             </span>
