--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Tyler Helmuth, Holden Lee, Will Perkins, Mohan Ravichandran, 
+                with <a href="https://www.tylerhelmuth.net", id="unique-link"> Tyler Helmuth </a>, <a href="http://holdenlee.github.io", id="unique-link"> Holden Lee </a>,<a href="https://willperkins.org", id="unique-link"> Will Perkins </a>, <a href="https://scholar.google.com/citations?user=Q0xL7IMAAAAJ&hl=en", id="unique-link"> Mohan Ravichandran </a>, 
                 <o:p></o:p>
             </span>
         </p>
