--- a/index.html
+++ b/index.html
@@ -2155,7 +2155,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Wei-Kuo Chen, Arnab Sen, preprint (2024), 
+                with <a href="https://sites.google.com/view/wkchen/home?authuser=0", id="unique-link"> Wei-Kuo Chen </a>, <a href="https://www-users.cse.umn.edu/~arnab/", id="unique-link"> Arnab Sen </a>, preprint (2024), 
                 <a href="https://arxiv.org/abs/2406.10760">arXiv:2406.10760</a>
                 <o:p></o:p>
             </span>
@@ -2202,7 +2202,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Holden Lee, preprint (2024), 
+                with <a href="http://holdenlee.github.io", id="unique-link"> Holden Lee </a>, preprint (2024), 
                 <a href="https://arxiv.org/abs/2407.00868">arXiv:2407.00868</a>
                 <o:p></o:p>
             </span>
