--- a/index.html
+++ b/index.html
@@ -2107,7 +2107,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with Yueqi Sheng, preprint (2023), 
+                with <a href="https://www.researchgate.net/scientific-contributions/Yueqi-Sheng-2133640586", id="unique-link"> Yueqi Sheng </a>, preprint (2023), 
                 <a href="https://arxiv.org/abs/2312.15774">arXiv:2312.15774</a>
                 <o:p></o:p>
             </span>
