--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with <a href="https://www.tylerhelmuth.net", id="unique-link"> Tyler Helmuth </a>, <a href="http://holdenlee.github.io", id="unique-link"> Holden Lee </a>,<a href="https://willperkins.org", id="unique-link"> Will Perkins </a>, <a href="https://scholar.google.com/citations?user=Q0xL7IMAAAAJ&hl=en", id="unique-link"> Mohan Ravichandran </a>, 
+                with <a href="https://www.tylerhelmuth.net", id="unique-link"> Tyler Helmuth, </a> <a href="http://holdenlee.github.io", id="unique-link"> Holden Lee, </a> <a href="https://willperkins.org", id="unique-link"> Will Perkins, </a> <a href="https://scholar.google.com/citations?user=Q0xL7IMAAAAJ&hl=en", id="unique-link"> Mohan Ravichandran </a>, 
                 <o:p></o:p>
             </span>
         </p>
@@ -1971,7 +1971,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with <a href="https://psdey.web.illinois.edu", id="unique-link"> Partha S. Dey </a>,  <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> 402, no.2, 1205–1258, 2023, 
+                with <a href="https://psdey.web.illinois.edu", id="unique-link"> Partha S. Dey, </a>  <i style='mso-bidi-font-style:normal'> Commun. Math. Phys. </i> 402, no.2, 1205–1258, 2023, 
                 <a href="https://arxiv.org/abs/2112.11349">arXiv:2112.11349</a>
                 <o:p></o:p>
             </span>
@@ -2016,7 +2016,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with <a href="https://psdey.web.illinois.edu", id="unique-link"> Partha S. Dey </a>, preprint (2022), 
+                with <a href="https://psdey.web.illinois.edu", id="unique-link"> Partha S. Dey, </a> preprint (2022), 
                 <a href="https://arxiv.org/abs/2212.14571">arXiv:2212.14571</a>
                 <o:p></o:p>
             </span>
@@ -2107,7 +2107,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with <a href="https://www.researchgate.net/scientific-contributions/Yueqi-Sheng-2133640586", id="unique-link"> Yueqi Sheng </a>, preprint (2023), 
+                with <a href="https://www.researchgate.net/scientific-contributions/Yueqi-Sheng-2133640586", id="unique-link"> Yueqi Sheng, </a> preprint (2023), 
                 <a href="https://arxiv.org/abs/2312.15774">arXiv:2312.15774</a>
                 <o:p></o:p>
             </span>
@@ -2155,7 +2155,7 @@
         <p class=MsoListParagraphCxSpMiddle>
             <span style='font-size:14.0pt;font-family:
             "Times New Roman";mso-fareast-font-family:"Times New Roman"'>
-                with <a href="https://sites.google.com/view/wkchen/home?authuser=0", id="unique-link"> Wei-Kuo Chen </a>, <a href="https://www-users.cse.umn.edu/~arnab/", id="unique-link"> Arnab Sen </a>, preprint (2024), 
+                with <a href="https://sites.google.com/view/wkchen/home?authuser=0", id="unique-link"> Wei-Kuo Chen, </a> <a href="https://www-users.cse.umn.edu/~arnab/", id="unique-link"> Arnab Sen </a>, preprint (2024), 
                 <a href="https://arxiv.org/abs/2406.10760">arXiv:2406.10760</a>
                 <o:p></o:p>
             </span>
