--- a/index.html
+++ b/index.html
@@ -1741,7 +1741,7 @@
             </span>
         </p>
 
-        <img src="prof1-3.jpg" align="right" style="width:440px;height:280px;"> 
+        <img src="prof1-3.png" align="right" style="width:440px;height:280px;"> 
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
