--- a/resesarch.html
+++ b/resesarch.html
@@ -1755,12 +1755,11 @@
             </span>
         </p>
        
-        
 
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                <o:p><a href="about.html" title="About Me">About Me</a></o:p>
+                <o:p>&nbsp;</o:p>
             </span>
         </p>
 
