--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                <o:p><a href="about.html" title="About Me">About Me</a></o:p>
+                <o:p><a href="resesarch.html" title="About Me">About Me</a></o:p>
             </span>
         </p>
 
