--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@
 
         <p class=MsoNormal>
             <span style='font-size:14.0pt;font-family:Times'>
-                <o:p><a href="resesarch.html" title="About Me">About Me</a></o:p>
+                <o:p>&nbsp;</a></o:p>
             </span>
         </p>
 
@@ -1829,9 +1829,7 @@
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:18.0pt;font-family:Times'>
-                    Research <span style='font-size:11.0pt;font-family:"Times New Roman";mso-fareast-font-family:
-                        "Times New Roman"'>
-                    (alphabetical authorship convention unless starred) 
+                    Selected Research (<a href="resesarch.html" title="Research">Full list)
                     <o:p></o:p>
                 </span>
                     <o:p></o:p>
@@ -1842,7 +1840,9 @@
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:18.0pt;font-family:Times'>
-                    <o:p>&nbsp;</o:p>
+                    <o:p><span style='font-size:11.0pt;font-family:"Times New Roman";mso-fareast-font-family:
+                        "Times New Roman"'>
+                        (alphabetical authorship convention unless starred) </o:p>
                 </span>
             </b>
         </p>
