--- a/index.html
+++ b/index.html
@@ -1829,7 +1829,7 @@
         <p class=MsoNormal>
             <b style='mso-bidi-font-weight:normal'>
                 <span style='font-size:18.0pt;font-family:Times'>
-                    Selected Research (<a href="resesarch.html" title="Research">Full list)
+                    Selected Research (<a href="resesarch.html" title="Research">Full list </a>)
                     <o:p></o:p>
                 </span>
                     <o:p></o:p>
